--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,28 +1,38 @@
 {
   "compilerOptions": {
-    "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
+    /* ===== Output / Target ===== */
     "target": "ES2022",
-    "useDefineForClassFields": true,
     "lib": ["ES2022", "DOM", "DOM.Iterable"],
-    "module": "ESNext",
-    "types": ["vite/client"],
-    "skipLibCheck": true,
 
-    /* Bundler mode */
-    "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
-    "verbatimModuleSyntax": true,
-    "moduleDetection": "force",
-    "noEmit": true,
+    /* ===== Modules ===== */
+    "module": "ESNext",
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "allowJs": true,
+    "resolveJsonModule": true,
+
+    /* ===== JSX / React ===== */
     "jsx": "react-jsx",
 
-    /* Linting */
+    /* ===== TS behavior ===== */
+    "useDefineForClassFields": true,
+    "skipLibCheck": true,
     "strict": true,
+    "noEmit": true,
+
+    /* ===== Jest compatibility ===== */
+    "verbatimModuleSyntax": false,
+
+    /* ===== Vite compatibility ===== */
+    "allowImportingTsExtensions": true,
+
+    /* ===== Lint / Clean Code ===== */
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src"]
+
+  "include": ["src", "src/setupTests.ts"]
 }
